# bintensors

./: .gitignore  README.md  SECURITY.md  makefile
.github/: PULL_REQUEST_FORMAT.md
.github/workflows/: python-release.yml  python.yml  rust-release.yml  rust.yml
attacks/: README.md  av_attempt_1.py  av_attempt_2.py  av_attempt_3.py  av_attempt_4.py  av_attempt_5.py
binding/python/: Cargo.toml  README.md  makefile  pyproject.toml
binding/python/benches/: bench.py
binding/python/py/bintensors/: __init__.py  __init__.pyi  numpy.py  torch.py
binding/python/src/: lib.rs
binding/python/tests/: test_buffer.py  test_np.py  test_pt.py
bintensors/: Cargo.toml  README.md
bintensors/benches/: benchmark.rs
bintensors/fuzz/: Cargo.toml
bintensors/fuzz/fuzz_targets/: fuzz_target_1.rs
bintensors/src/: id.rs  lib.rs  oid.rs  slice.rs  tensor.rs
specs/: encoding.md
