[package]
name = "bintensors"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hashbrown = { version = "0.15.2", features = ["serde"], optional = true }
bincode = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha1 = { version = "0.10.6", default-features = false }

[dependencies.bitflags]
version = "2.9.0"

[dev-dependencies]
criterion = "0.5"
memmap2 = "0.9"
proptest = "1.4"


[features]  
default = ["std"]
std = ["serde/default", "bincode/default", "sha1/default"]
# alloc = ["serde/alloc", "bincode/alloc", "hashbrown"]

[[bench]]
name = "benchmark"
harness = false
