[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "bintensors"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dynamic = ["version"]
authors = [
    {name = 'Luca Vivona', email = "lucavivona01@gmail.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
description = """
bintensors is a high-performance binary tensor serialization 
format designed to be faster than safetensors by eliminating 
JSON metadata overhead. Instead of using JSON for metadata storage, 
bintensors employs a compact binary header, reducing parsing time and improving I/O efficiency. 
The format begins with an 8-byte unsigned integer (u64), indicating the size of the binary header. 
This header contains essential tensor metadata, including the data type (dtype), 
the shape of the tensor stored as a length-prefixed list, 
and data offsets specifying where each tensor's raw values are stored within the file. 
An index map is also included for named tensor lookups. With its efficient structure, 
bintensors provides a fast and lightweight alternative for serializing and deserializing large models, 
making it ideal for machine learning, scientific computing, and other high-performance applications.
"""
[project.optional-dependencies]
numpy = ["numpy>=1.21.6"]
torch = [
    "bintensors[numpy]",
    "torch>=1.10",
]
quality = [
    "black==22.3",  # after updating to black 2023, also update Python version in pyproject.toml to 3.7
    "click==8.0.4",
    "isort>=5.5.4",
    "flake8>=3.8.3",
]
testing = [
    "bintensors[numpy]",
    "h5py>=3.7.0",
    "setuptools_rust>=1.5.2",
    "pytest>=7.2.0",
    "pytest-benchmark>=4.0.0",
    # "python-afl>=0.7.3",
    "hypothesis>=6.70.2",
]
all = [
    "bintensors[torch]",
    "bintensors[numpy]",
    "safetensors[quality]",
    "safetensors[testing]",
]
dev = [
    "bintensors[all]",
]

[project.urls]
Homepage = 'https://github.com/GnosisFoundation/bintensors'
Source = 'https://github.com/GnosisFoundation/bintensors'

[tool.maturin]
python-source = "py"
module-name = "bintensors._bintensors_rs"
bindings = 'pyo3'
features = ["pyo3/extension-module"]

[tool.black]
line-length = 119
target-version = ['py35']