[package]
name = "bintensors-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.bintensors]
path = ".."

[[bin]]
name = "fuzz_target_deserialize"
path = "fuzz_targets/fuzz_target_deserialize.rs"
test = false
doc = false
bench = false
